test/1.2/errors/T_EARG.dml
/*
  © 2021-2022 Intel Corporation
  SPDX-License-Identifier: MPL-2.0
*/
dml 1.2;
device test;

method f(int in1) -> (int out1) {
}

method g(int in1) {}
method h() -> (int in1) {}

extern int fun(void);

method init {
    local int i;
    local int j;
    /// ERROR EARG
    call $f() -> (i);
    /// ERROR EARG
    call $f(1, 2) -> (i);
    /// ERROR EARG
    call $f(1) -> (i, j);
    /// ERROR EARG
    call $f(1) -> ();
    /// ERROR EARG
    inline $f() -> (i);
    /// ERROR EARG
    inline $f(1, 2) -> (i);
    /// ERROR EARG
    inline $f(1) -> (i, j);
    /// ERROR EARG
    inline $f(1) -> ();
    /// ERROR EARG
    fun("hej");
}
